@@ -58,14 +58,6 @@ load_extra () {
 # Compute some constants in order to make things faster.
 ###########################################################
 
-# The width of partman/text/number.
-# number_width is used only in visual.d/number
-db_metaget partman/text/number description
-RET=$(printf "$RET" '')
-RET=$(stralign 50 "$RET" | sed 's/[^ ]//g')
-number_width=$((2 + 50 - ${#RET}))
-export number_width
-
 # Detect if Debconf can escape strings
 # non-empty means we can escape
 can_escape=''
